# SportTracker

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  Dockerfile  README.md  check.bat  docker-compose-with-georender.yaml  docker-compose.yaml  openapi.yaml  pyproject.toml  settings-example.json  settings-test.json
.gitlab/issue_templates/: Default.md  DependencyUpdates.md
js/: package-lock.json  package.json  webpack.config.js
sporttracker/: Constants.py  SportTracker.py  version.json
sporttracker/achievement/: AchievementBlueprint.py  AchievementCalculator.py  AchievementEntity.py  AnnualAchievementBlueprint.py
sporttracker/api/: Api.py  FormModels.py  Mapper.py  Models.py
sporttracker/authentication/: AdminWrapper.py  AuthenticationBlueprint.py
sporttracker/blueprints/: Achievements.py  AnnualAchievements.py  Api.py  Authentication.py  Charts.py  DistanceSports.py  DistanceWorkouts.py  FitnessSports.py  FitnessWorkouts.py  General.py  GpxTracks.py  LongDistanceTours.py  MaintenanceEventInstances.py  MaintenanceEvents.py  Maintenances.py  Maps.py  MonthGoals.py  MonthGoalsCount.py  MonthGoalsDistance.py  MonthGoalsDuration.py  Notifications.py  PlannedTours.py  QuickFilter.py  Search.py  Settings.py  Sports.py  Tracks.py  Users.py  WorkoutSports.py  Workouts.py
sporttracker/chart/: ChartBlueprint.py
sporttracker/dummyData/: DummyDataGenerator.py  fitTrack_1.fit  gpxTrack_1.gpx  gpxTrack_2.gpx
sporttracker/general/: GeneralBlueprint.py
sporttracker/gpx/: GpxBlueprint.py  GpxMetadataEntity.py  GpxPreviewImageService.py  GpxService.py  LongDistanceTourGpxPreviewImageService.py
sporttracker/helpers/: ChangelogParser.py  CsvImporter.py  Helpers.py  SettingsChecker.py
sporttracker/localization/: UpdateLocalization.py  messages.pot
sporttracker/logic/: AchievementCalculator.py  ChangelogParser.py  Constants.py  DateTimeAccess.py  DummyDataGenerator.py  FitSessionParser.py  FitToGpxConverter.py  GpxPreviewImageService.py  GpxService.py  LongDistanceTourGpxPreviewImageService.py  MaintenanceEventsCollector.py  MaintenanceFilterState.py  MaxSquareCache.py  NewVisitedTileCache.py  Observable.py  PlannedTourFilterState.py  QuickFilterState.py  TileRenderService.py  VisitedTileService.py
sporttracker/longDistanceTour/: LongDistanceTourBlueprint.py  LongDistanceTourEntity.py  LongDistanceTourService.py
sporttracker/maintenance/: MaintenanceBlueprint.py  MaintenanceEntity.py  MaintenanceEventInstanceBlueprint.py  MaintenanceEventInstanceEntity.py  MaintenanceEventInstanceModel.py  MaintenanceEventsCollector.py  MaintenanceFilterStateEntity.py
sporttracker/map/: MapBlueprint.py
sporttracker/monthGoal/: MonthGoalBlueprint.py  MonthGoalEntity.py  MonthGoalModel.py  MonthGoalService.py  MonthGoalsCountBlueprint.py  MonthGoalsDistanceBlueprint.py  MonthGoalsDurationBlueprint.py
sporttracker/monthGoals/: MonthGoalBlueprint.py  MonthGoalsCountBlueprint.py  MonthGoalsDistanceBlueprint.py  MonthGoalsDurationBlueprint.py
sporttracker/notification/: NotificationBlueprint.py  NotificationEntity.py  NotificationService.py  NotificationSettingsEntity.py  NotificationType.py
sporttracker/plannedTour/: PlannedTourBlueprint.py  PlannedTourEntity.py  PlannedTourFilterStateEntity.py  PlannedTourFilterStateModel.py  PlannedTourModel.py  PlannedTourService.py  TravelDirection.py  TravelType.py
sporttracker/quickFilter/: QuickFilterBlueprint.py  QuickFilterStateEntity.py
sporttracker/search/: SearchBlueprint.py
sporttracker/static/: openapi.yaml
sporttracker/templates/: about.jinja2  achievements.jinja2  annualAchievements.jinja2  icons.jinja2  login.jinja2  macros.jinja2  search.jinja2
sporttracker/tileHunting/: GpxPlannedTileEntity.py  GpxVisitedTileEntity.py  MaxSquareCache.py  NewVisitedTileCache.py  TileHuntingFilterStateEntity.py  TileRenderService.py  VisitedTileService.py
sporttracker/user/: CustomWorkoutFieldEntity.py  ParticipantEntity.py  SettingsBlueprint.py  UserBlueprint.py  UserEntity.py
sporttracker/workout/: HeartRateEntity.py  HeartRateService.py  WorkoutBlueprint.py  WorkoutEntity.py  WorkoutModel.py  WorkoutType.py
src/: SportTracker.py  version.json
src/blueprints/: Achievements.py  Api.py  (+13 more)
tests/: SeleniumTestBaseClass.py  TestConstants.py  conftest.py  test_AchievementCalculator.py  test_ChangelogParser.py  test_DistanceWorkouts.py  test_FitSessionParser.py  test_LongDistanceTours.py  test_MaintenanceFilterState.py  test_Maintenances.py  test_MonthGoals.py  test_NotificationService.py  test_NotificationSettings.py  test_PlannedTourFilterState.py  test_PlannedTours.py  test_Workouts.py
(+402 files in other folders)
